<?xml version="1.0"?>
<package>
  <name>pose_initializer</name>
  <version>0.1.0</version>
  <description>The pose_initializer package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/tado-aev/pose_initializer</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-numpy</run_depend>

  <export>
  </export>
</package>
